<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/rounded_top_corners">

            <TextView
                android:id="@+id/tv_select_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginVertical="@dimen/_20sdp"
                android:fontFamily="@font/inter_24pt_bold"
                android:text="@string/select_action"
                android:textColor="@color/text_color_title"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/tv_favorite"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginVertical="@dimen/_5sdp"
                android:background="@drawable/ripple_rectangle"
                android:clickable="true"
                android:drawablePadding="@dimen/_20sdp"
                android:ellipsize="end"
                android:focusable="true"
                android:fontFamily="@font/inter_18pt_regular"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_8sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/save_to_my_favorite"
                android:textColor="@color/text_color_title"
                android:textSize="15sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_heart_drawer"
                app:layout_constraintBottom_toTopOf="@id/tv_download" />

            <TextView
                android:id="@+id/tv_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginVertical="@dimen/_5sdp"
                android:background="@drawable/ripple_rectangle"
                android:clickable="true"
                android:drawablePadding="@dimen/_20sdp"
                android:ellipsize="end"
                android:focusable="true"
                android:fontFamily="@font/inter_18pt_regular"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_8sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/download"
                android:textColor="@color/text_color_title"
                android:textSize="15sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_download"
                app:layout_constraintBottom_toTopOf="@id/tv_set_wallpaper" />

            <TextView
                android:id="@+id/tv_set_wallpaper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginVertical="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/ripple_rectangle"
                android:clickable="true"
                android:drawablePadding="@dimen/_20sdp"
                android:ellipsize="end"
                android:focusable="true"
                android:fontFamily="@font/inter_18pt_regular"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_8sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/set_wallpaper"
                android:textColor="@color/text_color_title"
                android:textSize="15sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_paint_roller"
                app:layout_constraintBottom_toTopOf="@id/tv_share" />

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_50sdp"
                android:background="@drawable/ripple_rectangle"
                android:clickable="true"
                android:drawablePadding="@dimen/_20sdp"
                android:ellipsize="end"
                android:focusable="true"
                android:fontFamily="@font/inter_18pt_regular"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_8sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/share"
                android:textColor="@color/text_color_title"
                android:textSize="15sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_share_image"
                app:layout_constraintBottom_toBottomOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>