<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:id="@+id/view_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_color"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@drawable/custom_bg_dialog"
            android:padding="@dimen/_15sdp">

            <ImageView
                android:id="@+id/im_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/im_permission_dialog"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_content_permission"
                />


            <TextView
                android:id="@+id/tv_content_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_15sdp"
                android:text="@string/content_permission"
                android:textSize="18sp"
                android:textColor="@color/text_color_title"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@id/tv_allow"
                app:layout_constraintTop_toBottomOf="@id/im_sms" />


            <TextView
                android:id="@+id/tv_allow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background="@drawable/custom_bg_btn"
                android:gravity="center"
                android:paddingVertical="@dimen/_15sdp"
                android:text="@string/go_to_settings"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_content_permission" />

            <TextView
                android:id="@+id/tv_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/no_thanks"
                android:textColor="@color/text_color_title"
                android:textSize="18sp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_allow" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

</layout>