<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_color"
        android:paddingTop="@dimen/_30sdp">

        <ImageView
            android:id="@+id/im_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:background="@drawable/custom_bg_arrow"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/inter_24pt_bold"
            android:text="@string/recent"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/im_back" />

        <TextView
            android:id="@+id/tv_size_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:fontFamily="@font/inter_18pt_regular"
            android:text="@string/here_are_all_the_wallpapers_you_ve_viewed_recently"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcl_favorite"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/_150sdp"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_size_result"
            app:spanCount="2"
            tools:listitem="@layout/item_wallpaper" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/im_no_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/im_discover"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_no_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_24pt_bold"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:paddingHorizontal="@dimen/_16sdp"
            android:text="@string/explore_our_millions_of_wallpapers"
            android:textColor="@color/text_color_title"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="@id/im_no_download"
            app:layout_constraintRight_toRightOf="@id/im_no_download"
            app:layout_constraintTop_toBottomOf="@id/im_no_download" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>